--- a/index.html
+++ b/index.html
@@ -6,29 +6,59 @@
 </head>
 
 <body>
-<center>
-	<canvas id="gameCanvas" width="800" height="600"></canvas>
-<center>
+<canvas id="gameCanvas" width="800" height="600"></canvas>
+
 <script>
 var ballX = 75;
 var ballY = 75;
 var ballSpeedX = 5;
 var ballSpeedY = 7;
 
-const BRICK_W = 100;
-const BRICK_H = 50;
-const BRICK_COLS = 8;
+const BRICK_W = 80;
+const BRICK_H = 20;
 const BRICK_GAP = 2;
-const BRICK_ROWS = 4;
+const BRICK_COLS = 10;
+const BRICK_ROWS = 14;
 var brickGrid = new Array(BRICK_COLS * BRICK_ROWS);
+var bricksLeft = 0;
 
-const  PADDLE_WIDTH = 100;
+const PADDLE_WIDTH = 100;
 const PADDLE_THICKNESS = 10;
+const PADDLE_DIST_FROM_EDGE = 60;
 var paddleX = 400;
-const PADDLE_DISTANCE_FROM_EDGE = 20;
 
-var mouseX = 0,mouseY = 0;
-var canvas,canvasContext;
+var canvas, canvasContext;
+
+var mouseX = 0;
+var mouseY = 0;
+
+function updateMousePos(evt) {
+	var rect = canvas.getBoundingClientRect();
+	var root = document.documentElement;
+
+	mouseX = evt.clientX - rect.left - root.scrollLeft;
+	mouseY = evt.clientY - rect.top - root.scrollTop;
+
+	paddleX = mouseX - PADDLE_WIDTH/2;
+
+	// cheat / hack to test ball in any position
+	/*ballX = mouseX;
+	ballY = mouseY;
+	ballSpeedX = 4;
+	ballSpeedY = -4;*/
+}
+
+function brickReset() {
+	bricksLeft = 0;
+	var i;
+	for(i=0; i< 3*BRICK_COLS; i++) {
+		brickGrid[i] = false;
+	}
+	for(; i<BRICK_COLS * BRICK_ROWS; i++) {
+		brickGrid[i] = true;
+		bricksLeft++;
+	} // end of for each brick
+} // end of brickReset func
 
 window.onload = function() {
 	canvas = document.getElementById('gameCanvas');
@@ -37,26 +67,10 @@ window.onload = function() {
 	var framesPerSecond = 30;
 	setInterval(updateAll, 1000/framesPerSecond);
 
-	canvas.addEventListener('mousemove',updateMousePos);
+	canvas.addEventListener('mousemove', updateMousePos);
+
 	brickReset();
-}
-
-function brickReset() {
-	for(var i=0; i<BRICK_COLS * BRICK_ROWS; i++) {
-		if(Math.random() < 0.5) {
-			brickGrid[i] = true;
-		} else {
-			brickGrid[i] = false;
-		} // end of else (rand check)
-	} // end of for each brick
-} // end of brickReset func
-
-function updateMousePos(evt){
-	var rect = canvas.getBoundingClientRect();  //returns the size of an element and its position relative to the viewport.
-	var root = document.documentElement;
-	mouseX = evt.clientX - rect.left - root.scrollLeft;
-	mouseY = evt.clientY - rect.top - root.scrollTop ;
-	paddleX = mouseX - PADDLE_WIDTH/2;
+	ballReset();
 }
 
 function updateAll() {
@@ -64,41 +78,114 @@ function updateAll() {
 	drawAll();
 }
 
-function moveAll() {
+function ballReset() {
+	ballX = canvas.width/2;
+	ballY = canvas.height/2;
+}
+
+function ballMove() {
 	ballX += ballSpeedX;
 	ballY += ballSpeedY;
 
-	if(ballX < 0) {
+	if(ballX < 0 && ballSpeedX < 0.0) { //left
 		ballSpeedX *= -1;
 	}
-	if(ballX > canvas.width) {
+	if(ballX > canvas.width && ballSpeedX > 0.0) { // right
 		ballSpeedX *= -1;
 	}
-	if(ballY < 0) {
+	if(ballY < 0 && ballSpeedY < 0.0) { // top
 		ballSpeedY *= -1;
 	}
-	if(ballY > canvas.height) {
+	if(ballY > canvas.height) { // bottom
 		ballReset();
-		// ballSpeedY *= -1;
+		brickReset();
 	}
+}
 
-	var paddleTopEdgeY = canvas.height - 2*PADDLE_THICKNESS - PADDLE_DISTANCE_FROM_EDGE;
-	var paddleBottomEdgeY =  canvas.height - PADDLE_THICKNESS;
+function isBrickAtColRow(col, row) {
+	if(col >= 0 && col < BRICK_COLS &&
+		row >= 0 && row < BRICK_ROWS) {
+		 var brickIndexUnderCoord = rowColToArrayIndex(col, row);
+		 return brickGrid[brickIndexUnderCoord];
+	} else {
+		return false;
+	}
+}
+
+function ballBrickHandling() {
+	var ballBrickCol = Math.floor(ballX / BRICK_W);
+	var ballBrickRow = Math.floor(ballY / BRICK_H);
+	var brickIndexUnderBall = rowColToArrayIndex(ballBrickCol, ballBrickRow);
+
+	if(ballBrickCol >= 0 && ballBrickCol < BRICK_COLS &&
+		ballBrickRow >= 0 && ballBrickRow < BRICK_ROWS) {
+
+		if(isBrickAtColRow( ballBrickCol,ballBrickRow )) {
+			brickGrid[brickIndexUnderBall] = false;
+			bricksLeft--;
+			// console.log(bricksLeft);
+
+			var prevBallX = ballX - ballSpeedX;
+			var prevBallY = ballY - ballSpeedY;
+			var prevBrickCol = Math.floor(prevBallX / BRICK_W);
+			var prevBrickRow = Math.floor(prevBallY / BRICK_H);
+
+			var bothTestsFailed = true;
+
+			if(prevBrickCol != ballBrickCol) {
+				if(isBrickAtColRow(prevBrickCol, ballBrickRow) == false) {
+					ballSpeedX *= -1;
+					bothTestsFailed = false;
+				}
+			}
+			if(prevBrickRow != ballBrickRow) {
+				if(isBrickAtColRow(ballBrickCol, prevBrickRow) == false) {
+					ballSpeedY *= -1;
+					bothTestsFailed = false;
+				}
+			}
+
+			if(bothTestsFailed) { // armpit case, prevents ball from going through
+				ballSpeedX *= -1;
+				ballSpeedY *= -1;
+			}
+
+		} // end of brick found
+	} // end of valid col and row
+} // end of ballBrickHandling func
+
+function ballPaddleHandling() {
+	var paddleTopEdgeY = canvas.height-PADDLE_DIST_FROM_EDGE;
+	var paddleBottomEdgeY = paddleTopEdgeY + PADDLE_THICKNESS;
 	var paddleLeftEdgeX = paddleX;
-	var paddleRightEdgeX = paddleX + PADDLE_WIDTH;
+	var paddleRightEdgeX = paddleLeftEdgeX + PADDLE_WIDTH;
+	if( ballY > paddleTopEdgeY && // below the top of paddle
+		ballY < paddleBottomEdgeY && // above bottom of paddle
+		ballX > paddleLeftEdgeX && // right of the left side of paddle
+		ballX < paddleRightEdgeX) { // left of the left side of paddle
+		
+		ballSpeedY *= -1;
 
-	if(ballY > paddleTopEdgeY &&  //below top of paddle
-	   ballY < paddleBottomEdgeY &&//above bottom edge of paddle
-	   ballX > paddleLeftEdgeX &&  //right of left side paddle
-	   ballX < paddleRightEdgeX){ //left of right side of paddle
-		 ballSpeedY *= -1;
-		 var centerOfPaddleX = paddleX + PADDLE_WIDTH/2;
-		 var ballDistFromPaddleCenterX = ballX - centerOfPaddleX;
-		 ballSpeedX = ballDistFromPaddleCenterX * 0.37;
+		var centerOfPaddleX = paddleX+PADDLE_WIDTH/2;
+		var ballDistFromPaddleCenterX = ballX - centerOfPaddleX;
+		ballSpeedX = ballDistFromPaddleCenterX * 0.35;
 
-	}
+		if(bricksLeft == 0) {
+			brickReset();
+		} // out of bricks
+	} // ball center inside paddle
+} // end of ballPaddleHandling
 
+function moveAll() {
+	ballMove();
+	
+	ballBrickHandling();
+	
+	ballPaddleHandling();
+}
 
+function rowColToArrayIndex(col, row) {
+	return col + BRICK_COLS * row;
 }
 
 function drawBricks() {
@@ -106,7 +193,7 @@ function drawBricks() {
 	for(var eachRow=0;eachRow<BRICK_ROWS;eachRow++) {
 		for(var eachCol=0;eachCol<BRICK_COLS;eachCol++) {
 
-			var arrayIndex = BRICK_COLS * eachRow + eachCol; 
+			var arrayIndex = rowColToArrayIndex(eachCol, eachRow); 
 
 			if(brickGrid[arrayIndex]) {
 				colorRect(BRICK_W*eachCol,BRICK_H*eachRow,
@@ -117,21 +204,15 @@ function drawBricks() {
 
 } // end of drawBricks func
 
-
 function drawAll() {
 	colorRect(0,0, canvas.width,canvas.height, 'black'); // clear screen
-	colorCircle(ballX,ballY, 10, 'white'); // draw ball
-	// canvasContext.font = "20px Arial"
-	// canvasContext.fillText(mouseX + "," + mouseY,mouseX,mouseY)
-	colorRect(paddleX ,canvas.height - PADDLE_THICKNESS - PADDLE_DISTANCE_FROM_EDGE,PADDLE_WIDTH,PADDLE_THICKNESS);
-	
-	drawBricks();
-	colorText(mouseX+","+mouseY, mouseX + 5, mouseY + 5,  'yellow');
-}
 
-function ballReset(){
-	ballX = canvas.width/2;
-	ballY = canvas.height/2;
+	colorCircle(ballX,ballY, 10, 'white'); // draw ball
+
+	colorRect(paddleX, canvas.height-PADDLE_DIST_FROM_EDGE,
+				PADDLE_WIDTH, PADDLE_THICKNESS, 'white');
+
+	drawBricks();
 }
 
 function colorRect(topLeftX,topLeftY, boxWidth,boxHeight, fillColor) {
@@ -146,16 +227,11 @@ function colorCircle(centerX,centerY, radius, fillColor) {
 	canvasContext.fill();
 }
 
-// function colorText(showWords,textX,textY,fillColor){
-// 	canvasContext.fillStyle = fillColor;
-// 	canvasContext.fillText(showWords,textX,textY);
-// }
-
-function colorText(showWords,textX,textY, fillColor) {
-	
+function colorText(showWords, textX,textY, fillColor) {
 	canvasContext.fillStyle = fillColor;
 	canvasContext.fillText(showWords, textX, textY);
 }
+
 </script>
 
 </body>
